--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,7 @@ $second: #020f2c;
 $crimson: crimson;
 $fourth: orange;
 $lightPurple: #ebd4fd;
+$lightBlue: #cecef7;
 $fontColor: #f9ff66;
 $grey: grey;
 $bgColor: #dcdaff;
