--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -38,8 +38,7 @@
         width: 100%;
         position: absolute;
         height: 100%;
-        background: no-repeat center/auto
-            url("../assets/black-leaf.jpg");
+        background: no-repeat center/auto url("../assets/black-leaf.jpg");
         background-size: cover;
         background-position: center;
         border-radius: 0 0 $heroRad 0px;
@@ -48,27 +47,30 @@
 
 .page2,
 .page3 {
-    width: 100%;
-    padding:150px 150px 0 150px;
+    width: 70%;
+    margin: auto;
+    border-radius: 50px;
+    background-color: $lightBlue;
     display: flex;
+    margin-top: 100px;
     align-items: center;
     justify-content: center;
-    
+
     > img {
         width: 35%;
         animation: imgUp 0.7s linear infinite alternate;
     }
-    
+
     > div {
         width: 50%;
-        
-        
+        padding: 50px;
+
         > p {
             letter-spacing: 2px;
             word-spacing: 5px;
             font-family: cursive;
         }
-        
+
         > h2 {
             padding-bottom: 3px;
             width: fit-content;
@@ -86,7 +88,7 @@
 .about-page {
     width: 70%;
     min-height: 65vh;
-    margin-top: 250px;
+    margin-top: 100px;
     padding: 100px 0;
     color: $white;
     background: $second;
@@ -94,7 +96,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     > div {
         width: 70%;
         display: flex;
@@ -108,7 +110,7 @@
 }
 
 .social-media {
-    margin-top: 250px;
+    margin-top: 100px;
     color: $white;
     display: flex;
     justify-content: flex-end;
@@ -116,7 +118,7 @@
     > div {
         width: 70%;
         min-height: 65vh;
-        border-radius:$childRad 0 0$childRad;
+        border-radius: $childRad 0 0$childRad;
         background: $second;
         display: flex;
         align-items: center;
@@ -168,6 +170,49 @@
                     color: green;
                 }
             }
+        }
+    }
+}
+
+// Tablet width
+@media screen and (max-width: 1000px) {
+    .page2,
+    .page3 {
+        width: 90%;
+        flex-direction: column;
+
+        > div {
+            width: 90%;
+        }
+    }
+
+    .page2{
+        flex-direction: column-reverse;
+    }
+
+    .footer {
+        > main {
+            flex-direction: column;
+
+            > div {
+                width: 100%;
+            }
+        }
+    }
+}
+
+// Mobile width
+@media screen and (max-width: 480px) {
+    .page2,
+    .page3 {
+        > div {
+            padding: 25px;
+        }
+    }
+
+    .social-media {
+        > div {
+            min-height: 100vh;
         }
     }
 }
