--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,6 @@
 $white: #fff;
-$second: #020f2c;
+$darkBlue: #020f2c;
 $crimson: crimson;
-$fourth: orange;
 $lightPurple: #ebd4fd;
 $lightBlue: #cecef7;
 $fontColor: #f9ff66;
@@ -10,7 +9,7 @@ $bgColor: #dcdaff;
 
 //for liner gradient
 $c1: #1a020a;
-$c2: $second;
+$c2: $darkBlue;
 
 $font1: "Varela Round";
 $font2: sans-serif;
