--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,6 @@
-@import './colors.scss';
+@import "./colors.scss";
 
-nav{
+nav {
     width: 100%;
     height: 80px;
     padding: 0 2rem;
@@ -13,50 +13,94 @@ nav{
     background-image: linear-gradient(to right, $c1, $c2);
     color: $white;
 
-    > main{
+    > main {
         width: 50%;
         display: flex;
         justify-content: flex-end;
 
-        >a {
+        > a {
             color: $lightPurple;
             padding: 32px 1rem;
             cursor: pointer;
 
-            &:hover{
-                color:$crimson;
+            &:hover {
+                color: $crimson;
             }
         }
     }
 
     > button {
-        width: 50px;
-        height: 50px;
-        border:none;
+        border: none;
         color: $lightPurple;
         font-size: 1.2rem;
         background: none;
         cursor: pointer;
         display: none;
 
-        &:hover{
-            color:$crimson;
+        &:hover {
+            color: $crimson;
         }
-
     }
 }
 
-@media screen and (max-width: 700px){
-    nav{
+// Tablet and mobile compatible
+@media screen and (max-width: 700px) {
+    nav {
         > main {
             display: none;
         }
 
-        > button{
-            display: inline;
+        h2 {
+            margin: auto;   
+        }
+
+        > button {
+            position: absolute;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            right: 0;
+            padding: 25px;
+
+            > svg {
+                font-size: 1.5rem;
+            }
         }
     }
 
+    #nav-menu-slide {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        background-image: linear-gradient(to right, $c1, $c2);
+        transform: translateY(-200%);
+        transition: 0.4s ease-in-out;
+        z-index: 1;
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-    
+        > h2 {
+            display: none;
+        }
+
+        > main {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
+            width: 80%;
+
+            > a {
+                color: $lightPurple;
+                padding: 30px;
+                text-transform: uppercase;
+
+                &:hover {
+                    color: $crimson;
+                }
+            }
+        }
+    }
 }
