--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -3,7 +3,7 @@
 .home {
     width: 100%;
     height: 100vh;
-    background-color: $second;
+    background-color: $darkBlue;
     color: #fff;
     border-radius: 0 0 $heroRad 0px;
 
@@ -47,7 +47,7 @@
 
 .page2,
 .page3 {
-    width: 70%;
+    width: 60%;
     margin: auto;
     border-radius: 50px;
     background-color: $lightBlue;
@@ -62,8 +62,7 @@
     }
 
     > div {
-        width: 50%;
-        padding: 50px;
+        padding: 100px;
 
         > p {
             letter-spacing: 2px;
@@ -91,7 +90,7 @@
     margin-top: 100px;
     padding: 100px 0;
     color: $white;
-    background: $second;
+    background: $darkBlue;
     border-radius: 0 $childRad $childRad 0;
     display: flex;
     align-items: center;
@@ -119,7 +118,7 @@
         width: 70%;
         min-height: 65vh;
         border-radius: $childRad 0 0$childRad;
-        background: $second;
+        background: $darkBlue;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -146,7 +145,7 @@
                 background: $white;
                 border-radius: 50%;
                 margin: 10px;
-                color: $second;
+                color: $darkBlue;
                 transition: all 0.3s;
                 display: flex;
                 align-items: center;
@@ -155,7 +154,7 @@
 
                 &:hover {
                     color: $crimson;
-                    background-color: $second;
+                    background-color: $darkBlue;
                 }
 
                 svg {
@@ -182,7 +181,12 @@
         flex-direction: column;
 
         > div {
+            padding: 50px 15px;
             width: 90%;
+        }
+
+        img{
+            width: 50%;
         }
     }
 
@@ -205,14 +209,15 @@
 @media screen and (max-width: 480px) {
     .page2,
     .page3 {
-        > div {
-            padding: 25px;
+        
+        img{
+            width: 80%;
         }
     }
 
     .social-media {
         > div {
-            min-height: 100vh;
+            min-height: 120vh;
         }
     }
 }
