--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -50,9 +50,9 @@ nav {
             display: none;
         }
 
-        h2 {
-            margin: auto;   
-        }
+        // h2 {
+        //     margin: auto;   
+        // }
 
         > button {
             position: absolute;
