--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -3,9 +3,8 @@
 .home {
     width: 100%;
     height: 100vh;
-    background-color: $darkBlue;
     color: #fff;
-    border-radius: 0 0 $heroRad 0px;
+    border-radius: 0 0 0 $heroRad;
 
     > main {
         position: absolute;
@@ -38,10 +37,11 @@
         width: 100%;
         position: absolute;
         height: 100%;
-        background: no-repeat center/auto url("../assets/black-leaf.jpg");
+        // background: no-repeat center/auto url("../assets/black-leaf.jpg");
+        background-image: linear-gradient(to left, $c2, $c1);
         background-size: cover;
         background-position: center;
-        border-radius: 0 0 $heroRad 0px;
+        border-radius: 0 0 0 $heroRad;
     }
 }
 
@@ -137,8 +137,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            animation: imgUp 0.7s linear infinite alternate;
-
+            
             > a {
                 height: 9rem;
                 width: 9rem;
@@ -151,7 +150,8 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-
+                animation: imgUp 0.7s linear infinite alternate;
+                
                 &:hover {
                     color: $crimson;
                     background-color: $darkBlue;
