--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -16,6 +16,24 @@
         height: 100%;
         padding: 2rem;
         justify-content: center;
+        background-image: linear-gradient(to left, $c2, $c1);
+        opacity: 0.5;
+        border-radius: 0 0 0 $heroRad;
+
+        > #cursor-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 9999;
+
+            > .follower {
+                position: relative;
+                height: 50px;
+                width: 50px;
+                background-color: red;
+                border-radius: 50%;
+            }
+        }
 
         > h1 {
             font-size: 46px;
@@ -31,14 +49,12 @@
             }
         }
     }
-
     &::before {
         content: "";
         width: 100%;
         position: absolute;
         height: 100%;
-        // background: no-repeat center/auto url("../assets/black-leaf.jpg");
-        background-image: linear-gradient(to left, $c2, $c1);
+        background: no-repeat center/auto url("../assets/black-leaf.jpg");
         background-size: cover;
         background-position: center;
         border-radius: 0 0 0 $heroRad;
@@ -137,7 +153,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            
+
             > a {
                 height: 9rem;
                 width: 9rem;
@@ -151,7 +167,7 @@
                 justify-content: center;
                 flex-direction: column;
                 animation: imgUp 0.7s linear infinite alternate;
-                
+
                 &:hover {
                     color: $crimson;
                     background-color: $darkBlue;
@@ -185,12 +201,12 @@
             width: 90%;
         }
 
-        img{
+        img {
             width: 50%;
         }
     }
 
-    .page2{
+    .page2 {
         flex-direction: column-reverse;
     }
 
@@ -209,8 +225,7 @@
 @media screen and (max-width: 480px) {
     .page2,
     .page3 {
-        
-        img{
+        img {
             width: 80%;
         }
     }
