--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,12 +2,12 @@
 
 .home {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 80px);
     color: #fff;
     border-radius: 0 0 0 $heroRad;
+    margin-bottom: 150px;
 
     > main {
-        position: absolute;
         text-transform: uppercase;
         display: flex;
         flex-direction: column;
@@ -16,48 +16,44 @@
         height: 100%;
         padding: 2rem;
         justify-content: center;
-        background-image: linear-gradient(to left, $c2, $c1);
-        opacity: 0.5;
         border-radius: 0 0 0 $heroRad;
+        background-image: linear-gradient(
+                to right,
+                rgb(26, 2, 10, 0.8),
+                rgb(2, 15, 44, 0.8)
+            ),
+            url("../assets/black-leaf.jpg");
+        background-size: cover;
+        background-position: center;
 
-        > #cursor-container {
+        > #follower {
             position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 9999;
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            background: $crimson;
+            background-size: cover;
+            background-position: center;
+            top: calc(50% - 140px);
+            left: calc(50% - 140px);
 
-            > .follower {
-                position: relative;
-                height: 50px;
-                width: 50px;
-                background-color: red;
-                border-radius: 50%;
-            }
+            animation: blinkAround 1s infinite alternate;
         }
 
         > h1 {
-            font-size: 46px;
+            font-size: 45px;
         }
 
         > p {
             color: grey;
             background: #000000;
             padding: 0 5px;
+            z-index: 1;
 
             > span {
                 color: crimson;
             }
         }
-    }
-    &::before {
-        content: "";
-        width: 100%;
-        position: absolute;
-        height: 100%;
-        background: no-repeat center/auto url("../assets/black-leaf.jpg");
-        background-size: cover;
-        background-position: center;
-        border-radius: 0 0 0 $heroRad;
     }
 }
 
@@ -139,6 +135,7 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        margin-bottom: 150px;
 
         > h1 {
             position: relative;
