added dark mode features

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,13 +7,15 @@ $fontColor: #f9ff66;
 $grey: grey;
 $bgColor: #dcdaff;
 
-//for liner gradient
+$temp:#040414;
+
+//for linear gradient
 $c1: #1a020a;
 $c2: $darkBlue;
 
 $font1: "Varela Round";
 $font2: sans-serif;
 
-// border-radius 
-$heroRad: 200px;
-$childRad: 200px;
+// border-radius
+$heroRad: 150px;
+$childRad: 100px;
