--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,6 +8,7 @@
     margin-bottom: 150px;
 
     > main {
+        cursor: none;
         text-transform: uppercase;
         display: flex;
         flex-direction: column;
@@ -26,18 +27,24 @@
         background-size: cover;
         background-position: center;
 
-        > #follower {
+        > .cursor-container {
+            top: -20px;
+            left: -20px;
             position: absolute;
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            background: $crimson;
-            background-size: cover;
-            background-position: center;
-            top: calc(50% - 140px);
-            left: calc(50% - 140px);
 
-            animation: blinkAround 1s infinite alternate;
+            > #follower {
+                position: relative;
+                height: 40px;
+                width: 40px;
+                border-radius: 50%;
+                background-image: radial-gradient($crimson, $crimson);
+                box-shadow: 0px 0px 50px $crimson;
+                background-size: cover;
+                background-position: center;
+                filter: blur(2px);
+
+                animation: blinkAround 1s infinite alternate;
+            }
         }
 
         > h1 {
@@ -67,14 +74,19 @@
     margin-top: 100px;
     align-items: center;
     justify-content: center;
+    padding: 50px;
 
     > img {
         width: 35%;
         animation: imgUp 0.7s linear infinite alternate;
+        border-radius: 20px;
+        background: lightsteelblue;
+        margin: 50px;
     }
 
     > div {
-        padding: 100px;
+        padding: 0 50px;
+        min-width: 60%;
 
         > p {
             letter-spacing: 2px;
@@ -192,6 +204,7 @@
     .page3 {
         width: 90%;
         flex-direction: column;
+        padding: 0px;
 
         > div {
             padding: 50px 15px;
@@ -200,6 +213,7 @@
 
         img {
             width: 50%;
+            margin: 0 50px 50px 50px;
         }
     }
 
@@ -233,3 +247,5 @@
         }
     }
 }
+
+// This is content sytles
