--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 $white: #fff;
-$darkBlue: #020f2c;
+$darkBlue: #020b2c;
 $crimson: crimson;
 $lightPurple: #ebd4fd;
 $lightBlue: #cecef7;
@@ -7,7 +7,7 @@ $fontColor: #f9ff66;
 $grey: grey;
 $bgColor: #dcdaff;
 
-$temp:#040414;
+$temp: #190d327d;
 
 //for linear gradient
 $c1: #1a020a;
