--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,51 +4,72 @@
     position: sticky;
     top: 0;
     z-index: 10;
-}
-
-nav {
+    padding: 0;
     width: 100%;
-    height: 80px;
-    padding: 0 2rem;
-    background-image: linear-gradient(to right, $c1, $c2);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: $white;
 
-    > main {
-        width: 50%;
+    & > .header,
+    & > .header-scrolled {
+        height: 80px;
+        width: 100%;
+        padding: 0 2rem;
         display: flex;
-        justify-content: flex-end;
         align-items: center;
+        justify-content: space-between;
+        color: $white;
+        transition: all 200ms ease;
 
-        > a {
-            color: $lightPurple;
-            padding: 30px 1rem;
+        h2 {
+            margin: 0;
+            color: $white;
             cursor: pointer;
+        }
+
+        > main {
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+
+            > a {
+                color: $lightPurple;
+                padding: 28px 1rem;
+                cursor: pointer;
+
+                &:hover {
+                    color: $crimson;
+                }
+            }
+
+            #mode-icon {
+                padding: 22px;
+                font-size: 1.5rem;
+            }
+        }
+
+        > button {
+            border: none;
+            color: $lightPurple;
+            font-size: 1.2rem;
+            background: none;
+            cursor: pointer;
+            display: none;
 
             &:hover {
                 color: $crimson;
             }
         }
-
-        #mode-icon{
-            padding: 30px;
-            font-size: 1.5rem;
-        }
     }
 
-    > button {
-        border: none;
-        color: $lightPurple;
-        font-size: 1.2rem;
-        background: none;
-        cursor: pointer;
-        display: none;
+    & > .header {
+        height: 80px;
+        background-image: linear-gradient(to right, $c1, $c2);
 
-        &:hover {
-            color: $crimson;
-        }
+    }
+    & > .header-scrolled {
+        height: 60px;
+        background-image: linear-gradient(to right, #1a020ac4, #020b2ce3);
+        box-shadow: 0px 0px 55px #1d1616;
+
     }
 }
 
@@ -58,14 +79,15 @@ nav {
 
 // Tablet and mobile compatible
 @media screen and (max-width: 700px) {
-    nav {
-        > main {
-            display: none;
+    .header,
+    .header-scrolled {
+        & > main {
+            display: none !important;
         }
 
         > button {
             position: absolute;
-            display: flex;
+            display: flex !important;
             justify-content: flex-end;
             align-items: center;
             right: 0;
