added backlit features in content posts

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,9 +5,11 @@ $lightPurple: #ebd4fd;
 $lightBlue: #cecef7;
 $fontColor: #f9ff66;
 $grey: grey;
+$ledBacklit: #2b2aa8;
 $bgColor: #dcdaff;
+$bgRead: #121a38;
 
-$temp: #030718;
+$temp: #04091f;
 
 //for linear gradient
 $c1: #1a020a;
