--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,6 +8,10 @@ $grey: grey;
 $ledBacklit: #2b2aa8;
 $bgColor: #dcdaff;
 $bgRead: #121a38;
+$bgLight: #dcdaff;
+$bgDark: #020b2c;
+$bgContentDark: #121a38;
+$bgContentLight: #cecef7;
 
 $temp: #04091f;
 
