--- a/src/styles/error404.scss
+++ b/src/styles/error404.scss
@@ -5,16 +5,14 @@ div {
         display: flex;
         align-items: center;
         justify-content: center;
-        
-        .error-content-light,
-        .error-content-dark {
+
+        .error-content {
             width: 70%;
             min-height: calc(85vh - 80px);
             margin: 70px 0;
             padding: 0 60px;
             background: $lightBlue;
             border-radius: $childRad;
-            box-shadow: 0px 0px 80px $darkBlue;
             text-align: center;
             display: flex;
             align-items: center;
@@ -60,26 +58,13 @@ div {
                 background-size: cover;
             }
         }
-
-        .error-content-dark {
-            background: $bgRead;
-            color: $white;
-            box-shadow: 0px 0px 200px $ledBacklit;
-
-            a {
-                h2{
-                    color: $white;
-                }
-            }
-        }
     }
 }
 
 @media screen and (max-width: 750px) {
     div {
         > .error-page-wrapper {
-            .error-content-light,
-            .error-content-dark {
+            .error-content {
                 width: 90%;
                 border-radius: 50px;
 
