--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,6 +6,7 @@
     color: #fff;
     border-radius: 0 0 0 $heroRad;
     margin-bottom: 150px;
+    transition: all 1s ease;
 
     > main {
         cursor: none;
@@ -31,9 +32,8 @@
             top: -20px;
             left: -20px;
             position: absolute;
-            
+
             > #follower {
-                // overflow: hidden;
                 position: relative;
                 height: 40px;
                 width: 40px;
@@ -209,7 +209,7 @@
         padding: 0px;
 
         > div {
-            padding: 50px 15px;
+            padding: 70px 5px;
             width: 90%;
         }
 
@@ -233,6 +233,8 @@
         }
     }
 }
+
+
 
 // Mobile width
 @media screen and (max-width: 480px) {
