--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,13 +1,23 @@
 @import "./colors.scss";
 
 @mixin themeBtn {
-    color: $lightPurple;
-    background-image: linear-gradient(45deg,#800202, #0357038c, #1212a7);
+    color: $darkBlue;
+    // background-image: linear-gradient(45deg,#800202, #0357038c, #1212a7);
     border: none;
+    background: linear-gradient(
+        145deg,
+        $darkBlue,
+        #284d5d,
+        $lightPurple,
+        #016a97,
+        $lightPurple,
+        $crimson
+    );
+    background-size: 500% 500%;
+    animation: rotateBgColor 10s ease infinite;
 
     &:hover {
-        // background-image: linear-gradient(to right, #17176e, #5a0a0a);
-    background-image: linear-gradient(145deg,#860808, #0053008c, #000075);
+        color: $white;
     }
 }
 
@@ -65,6 +75,7 @@
                     $lightBlue,
                     $lightPurple
                 );
+
                 border-radius: 25px;
                 text-align: center;
 
