--- a/src/styles/contents.scss
+++ b/src/styles/contents.scss
@@ -50,7 +50,6 @@ $tags-border-radius: 15px;
     }
 }
 
-
 div {
     & > .main-content {
         width: $main-content-width;
@@ -68,6 +67,111 @@ div {
                 @include blog-tags;
             }
         }
+    }
+}
+
+.carousel {
+    width: 100%;
+    position: relative;
+
+    img {
+        margin: auto;
+        max-width: 100%;
+        max-height: calc(100vh - 80px);
+        background-size: 50%;
+    }
+
+    .floating-card-container {
+        width: 70%;
+        position: absolute;
+        display: flex;
+        align-items: first baseline;
+        top: 88%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .dummy-space-left {
+            width: 70%;
+        }
+        .floating-cards {
+            width: 30%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+
+            img {
+                width: 100%;
+                height: unset;
+
+                &:hover {
+                    opacity: 0.7;
+                    background-image: linear-gradient(#111, #111);
+                }
+            }
+
+            .floating-heading {
+                padding: 15px;
+                position: absolute;
+                color: $lightBlue;
+                display: none;
+            }
+
+            &:hover {
+                .floating-heading {
+                    display: block;
+                }
+            }
+        }
+    }
+}
+
+.all-contents-container {
+    width: 70%;
+    margin: auto;
+    display: flex;
+
+    .item-cards-container {
+        width: 70%;
+        margin-right: 5px;
+
+        .item-cards {
+            display: flex;
+            margin-bottom: 10px;
+            background-color: $lightBlue;
+
+            .cards-img-container {
+                width: 40%;
+                height: 250px;
+                background: grey;
+
+                img {
+                    width: 100%;
+                    height: 250px;
+                }
+            }
+
+            .cards-details-container {
+                width: 60%;
+                height: 250px;
+                padding: 10px;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                color: #111;
+            }
+
+            &:hover {
+                background-color: #adb5ce;
+            }
+        }
+    }
+
+    .slide-cards {
+        width: 30%;
+        margin-left: 5px;
+        background: $lightBlue;
+        top: 60px;
+        position: sticky;
     }
 }
 
