--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,12 +6,11 @@
     border: none;
     background: linear-gradient(
         145deg,
-        $darkBlue,
-        #284d5d,
-        $lightPurple,
+        $crimson,
+        $lightBlue,
         #016a97,
         $lightPurple,
-        $crimson
+        #284d5d,
     );
     background-size: 500% 500%;
     animation: rotateBgColor 10s ease infinite;
