content page initial update verison

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -12,6 +12,8 @@ $bgLight: #dcdaff;
 $bgDark: #020b2c;
 $bgContentDark: #121a38;
 $bgContentLight: #cecef7;
+$bgTags: #9696c9;
+$textSelectionCol: #9696c9;
 
 $temp: #04091f;
 
