--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,10 @@
     border-radius: $childRad;
 }
 
+::selection {
+    background-color: $textSelectionCol;
+}
+
 #alert-box-container {
     display: none;
     justify-content: center;
@@ -217,8 +221,8 @@ body {
 }
 
 .pineapple-mint {
-    background: #8A7D31;
-    background: #B78A30;
+    background: #8a7d31;
+    background: #b78a30;
 
     .navbar {
         position: fixed;
@@ -231,15 +235,15 @@ body {
 
     .footer,
     .header-scrolled {
-        background-image: linear-gradient(145deg, #FCDF2D, #BBD6B8) !important;
+        background-image: linear-gradient(145deg, #fcdf2d, #bbd6b8) !important;
         color: #000000;
-        a{
+        a {
             color: grey !important;
-            &:hover{
+            &:hover {
                 color: #000000 !important;
             }
         }
-        &:hover{
+        &:hover {
             color: #000000 !important;
         }
     }
